<resources>
    <string name="app_name">Rebin</string>
    <string name="title_welcome_1">Mudah \nJual Sampah</string>
    <string name="desc_welcome_1">Jual sampah di tempat terdekat\ndan dapatkan hadiah</string>
    <string name="title_welcome_2">Semua Bisa\nDaur Ulang</string>
    <string name="desc_welcome_2">Dengan mendaur ulang, kamu turut \nmelestarikan bumi dan\nmensejahterakan masyarakat</string>
    <string name="title_welcome_3">Yuk Gabung\nBersama Kami</string>
    <string name="desc_welcome_3">Menjadi agen peduli\npengelolaan sampah untuk\nmasa depan cerah</string>
    <string name="title_welcome_4">Selamat Datang</string>
    <string name="desc_welcome_4">Mari Jelajahi Rebin </string>
    <string name="lets_get_started">Yuk Kita Mulai</string>
    <string name="login_title">Masuk Akun</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="login">Masuk</string>
    <string name="or">Atau</string>
    <string name="login_with_google">Masuk Akun Google</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="signup_title">Daftar Akun</string>
    <string name="name">Nama</string>
    <string name="signup_with_google">Daftar Akun Google</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="email_error_message">Masukkan email yang benar</string>
    <string name="password_error_message">Kata sandi harus lebih dari 8 karakter</string>
    <string name="analize">Analisa</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galery</string>
    <string name="logout">Logout</string>
    <string name="menu_to_exit">Menu to exit</string>
    <string name="profile">Profile</string>
    <string name="this_is_your_picture">This is your picture</string>
    <string name="update">Update Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prediction_image">Prediction Image</string>
    <string name="clear_all">Clear All</string>
    <string name="searchbar_hint">Cari Kerajinan disini...</string>
    <string name="search">Pencarian</string>
    <string name="history">Riwayat</string>
    <string name="home">Beranda</string>
    <string name="detection">Deteksi</string>
    <string name="result_detection">Hasil Deteksi</string>
    <string name="skip">Lewati</string>
    <string name="toolbar_rebin">Icon Rebin</string>
    <string name="retry">Try Again</string>
    <string name="edit_profile">Edit Profile</string>
</resources>